fix: 💄 z-index issue

--- a/src/app/containers/Header.scss
+++ b/src/app/containers/Header.scss
@@ -12,7 +12,7 @@ svg {
 }
 
 .navbar {
-  z-index: 2;
+  z-index: 660;
   position: fixed;
   padding: 0rem 1rem;
   background-color: var(--footer);
