--- a/src/app/views/Global.scss
+++ b/src/app/views/Global.scss
@@ -15,7 +15,6 @@ body {
 .content {
   position: relative;
   flex: 1;
-  z-index: 20;
   padding-bottom: 50px;
   color: var(--textColorGlobal);
 }
